Compiler/tests/typing/bad/testfile-assign-4.rs

struct S { a: i32 }
fn main() { let x : i32 = 42; let s : S = S { a: 89 }; x = s; return; }
